Bug 1336527 Define RegisterIdlePeriod r=baku

MozReview-Commit-ID: A41UJ6OHvP7